Finished prints page, fixed some layout and spacing issues

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -662,7 +662,6 @@ padding-top: 10px;
   margin-top: 20px;
   padding-top: 20px;
   padding-left: 20px;
-  background-color: pink;
 }
 
 .blog_intro a {
@@ -678,7 +677,6 @@ padding-top: 10px;
   margin-bottom: 10px;
   padding-bottom: 20px;
   padding-left: 20px;
-  background-color: blue;
 }
 
 .blog_gallery {
@@ -695,7 +693,7 @@ padding-top: 10px;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 300px 300px 300px 300px 1fr;
-  grid-template-rows: 100px
+  grid-template-rows: 80px
                       auto
                       auto
                       auto
@@ -713,7 +711,7 @@ padding-top: 10px;
 @media screen and (min-width: 1025px) and (max-width: 1400px){
     .prints_grid{
       grid-template-columns: 1fr 250px 250px 250px 250px 1fr;
-      grid-template-rows: 100px
+      grid-template-rows: 80px
                           auto
                           auto
                           auto
@@ -731,8 +729,8 @@ padding-top: 10px;
 
 @media screen and (min-width: 769px) and (max-width: 1024px){
     .prints_grid{
-      grid-template-columns: 1fr 175px 175px 175px 175px 1fr;
-      grid-template-rows: 100px
+      grid-template-columns: 1fr 120px 120px 120px 120px 1fr;
+      grid-template-rows: 80px
                           auto
                           auto
                           auto
@@ -749,7 +747,7 @@ padding-top: 10px;
 @media screen and (min-width: 641px) and (max-width: 768px){
     .prints_grid{
         grid-template-columns: 1fr 200px 200px 200px 1fr;
-        grid-template-rows: 100px
+        grid-template-rows: 80px
                             auto
                             auto
                             auto
@@ -768,7 +766,7 @@ padding-top: 10px;
 @media screen and (max-width: 640px){
     .prints_grid {
         grid-template-columns: 1fr auto 1fr;
-        grid-template-rows: 100px
+        grid-template-rows: 80px
                             auto
                             auto
                             auto
@@ -792,6 +790,7 @@ padding-top: 10px;
   background-color: #D1D2D5;
   padding-left: 20px;
   padding-right: 20px;
+  padding-top: 20px;
 }
 
 #grandcircle_prints {
@@ -799,6 +798,15 @@ padding-top: 10px;
   background-color: #D1D2D5;
   padding-left: 20px;
   padding-right: 20px;
+  padding-top: 10px;
+}
+
+#magnets_prints {
+  grid-area: magnets;
+  background-color: #D1D2D5;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
 }
 
 .prints h2 {
@@ -858,48 +866,6 @@ padding-top: 10px;
 
 .printsinfo p {
 padding: 10px 50px;
-}
-
-#magnets {
-  grid-area: magnets;
-  background-color: #D1D2D5;
-  width: 100%;
-  height: auto;
-  padding-top: 10px;
-}
-
-#magnets .printspost {
-  display: flex;
-  flex-direction: column;
-  width: 425px;
-  height: 525px;
-  margin-bottom: 20px;
-  background-color: #FFFFFF;
-  justify-content: center;
-  flex-wrap: wrap;
-  border-radius: 10px;
-}
-
-#magnets h2 {
-  padding-top: 50px;
-  text-align: center;
-}
-
-#magnets h3 {
-  padding-top: 20px;
-  text-align: center;
-}
-
-#magnets .flexcontainer {
-  justify-content: space-around;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  height: auto;
-  padding-bottom: 32px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-top: 30px;
 }
 
 
